--- a/Sevici/.project
+++ b/Sevici/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bolsa_eclipse</name>
+	<name>Sevici</name>
 	<comment></comment>
 	<projects>
 	</projects>
